Add unit test/ refactoring code/ move logic to separeate folders

--- a/src/features/ToDoFooter/ToDoFiltersPanel.module.css
+++ b/src/features/ToDoFooter/ToDoFiltersPanel.module.css
@@ -2,7 +2,7 @@
     margin-left: auto;
     cursor: pointer;
     padding: 0.2rem;
-    border: 1px #373537;
+    border: 1px;
     background-color: white;
     color: #a3a5b2;
     border-radius: 12px;
