Add spinner functionlaity

--- a/src/features/ToDoFooter/ToDoFooter.module.css
+++ b/src/features/ToDoFooter/ToDoFooter.module.css
@@ -9,7 +9,7 @@
     padding: 0.2rem;
     font-size: small;
     background-color: white;
-    color: #a3a5b2;
+    color: #36d7b7;
 }
 
 .completeAllButton {
@@ -17,7 +17,7 @@
     padding: 0.2rem;
     border: 1px;
     background-color: white;
-    color: #a3a5b2;
+    color: #36d7b7;
     border-radius: 1rem;
     margin-right: 1rem;
   }
