--- a/src/features/ToDoFooter/ToDoFilterPanel/ToDoFiltersPanel.module.css
+++ b/src/features/ToDoFooter/ToDoFilterPanel/ToDoFiltersPanel.module.css
@@ -4,7 +4,7 @@
     padding: 0.2rem;
     border: 1px;
     background-color: white;
-    color: #a3a5b2;
+    color: #36d7b7;
     border-radius: 12px;
     margin-right: 1rem;
   }
